tests/paczka2/big_fuzzy/74996153.err
Error in line 1: Oz3pj A567 22,0
Error in line 5: 226vIf8 S405 83,
Error in line 3: Oz3pj S595 4,7
Error in line 9: NX3txH6Ad A567 10,6
Error in line 24: 226vIf8 S405 177,9
Error in line 26: qaR9A2 A748 43,1
Error in line 29: fyTtLK S405 37,6
Error in line 36: A748 A748 67,4
Error in line 33: fyTtLK S405 1,6
Error in line 38: A748 A567 89,9
Error in line 30: qaR9A2 S595 20,4
Error in line 43: qaR9A2 S405 8,6
Error in line 63: NX3txH6Ad S595 32,8
Error in line 67: A748 S405 231,3
Error in line 74: A748 A748 23,2
Error in line 75: SjpyT7 S405 96,0
Error in line 97: A748 S405 8|,7
Error in line 95: Oz3pj A567 64,5
Error in line 100: õõ6vIf8 A567 õ8,0
Error in line 102: A748 S405 406,1
Error in line 96: SjpyT7 S405 358,2
Error in line 106: A748 A567 23,9
Error in line 105: SjpyT7 S595 37,6
Error in line 119: 226vIf8 S405 67,0
Error in line 137: A748 A748 83,9
Error in line 143: fyTtLK S405 -1,6
Error in line 141: A748 A567 52,1
Error in line 146: A748 S405 62,5
Error in line 147: NX3txH6Ad A567 16,6
Error in line 151: fyTtLK A567 40,4
Error in line 148: A748 S595 32,0
Error in line 155: A748 A567 45,7
Error in line 168: A748 S405 97,0
Error in line 170: qaR9A2 A748 38,7
Error in line 184: A748 A748 16,9
Error in line 190: fyTtLK A748 53,5
Error in line 220: NX3txH6Ad A748 33,00
Error in line 221: Oz3pj A748 10,
Error in line 223: SjpyT| S405 4|,0
Error in line 226: qaR9A2 S595 56,6
Error in line 224: SjpyT7 S405 175,8
Error in line 229: qaR9A2 A748 17,9
Error in line 231: qaR9A2 S405 66,7
Error in line 230: SjpyT7 A567 68,6
Error in line 244: SjpyT7 S595 0,6
Error in line 243: Oz3pj A567 36,9
